Fix bug #57544.  Add text/plain to the list of types that we support for the embedding widget.  r=valeski sr=mscott