embedding/browser/gtk/src/GtkMozEmbedChrome.cpp
@@ -491,6 +491,7 @@ NS_IMETHODIMP GtkMozEmbedChrome::IsPreferred(const char *aContentType, nsURILoad
   {
     PR_LOG(mozEmbedLm, PR_LOG_DEBUG, ("checking content type %s\n", aContentType));
     if (nsCRT::strcasecmp(aContentType,  "text/html") == 0
+        || nsCRT::strcasecmp(aContentType, "text/plain") == 0
         || nsCRT::strcasecmp(aContentType, "text/xul") == 0
         || nsCRT::strcasecmp(aContentType, "text/rdf") == 0 
         || nsCRT::strcasecmp(aContentType, "text/xml") == 0
